Corrected header formatting on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,13 @@ header a:hover {
     header {
         flex-direction: column;
         align-items: center;
+        justify-content: space-between;
+        padding: 0;
     }
+    header ul {
+        margin: 0;
+    }
+
 
 }
 
